hard-gists/542786/run.log
=== Docker Run Log for 542786 ===
Started at: Mi 29. Okt 15:41:14 CET 2025

[2025-10-29 15:41:14] START: Running container for 542786
[2025-10-29 15:41:15] SUCCESS: Container 36371b7dc0f19ad0063e6de9ccc7beaae95f5ff258ef621889855ea282ab079d started for 542786
=== Container logs for 542786 ===
  File "/snippet.py", line 237
    print "Iteration", it
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 542786 ===
[2025-10-29 15:41:17] INFO: Container 36371b7dc0f19ad0063e6de9ccc7beaae95f5ff258ef621889855ea282ab079d has stopped
